status text visibility fixed

--- a/style.css
+++ b/style.css
@@ -266,9 +266,12 @@ main .container .left .profile {
   display: block;
   width: 100%;
   height: 5rem;
-  background: #000;
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.75));
   position: absolute;
   bottom: 0;
+}
+.middle .stories .story .name {
+  z-index: 1;
 }
 .middle .stories .story:nth-child(1) {
   background: url("/images/story-1.jpg") no-repeat center center/cover;
